--- a/index.html
+++ b/index.html
@@ -8,27 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Education Portal</h1>
-        <!-- Add navigation and login buttons here -->
+        <h1>Jaydip's Portfolio</h1>
+       
     </header>
 
-    <main>
-        <section id="universities">
-            <!-- University cards go here -->
-        </section>
-
-        <section id="colleges">
-            <!-- College cards go here -->
-        </section>
-
-        <section id="courses">
-            <!-- Course selection goes here -->
-        </section>
-
-        <section id="question-papers">
-            <!-- Display question papers based on user selection -->
-        </section>
-    </main>
+    
 
     <footer>
         <!-- Footer content goes here -->
