--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Education Portal</title>
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <h1>Jaydip's Portfolio</h1>
-       
+        <a href="#" class="logo">Jaydip's <span>Portfolio</span></a>
+        <div class="bx bx-menu"></div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#"> Services</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact </a></li>
+      </ul>
+
+      <div class="top-btnn">
+        <a href="#" class="h-btn"> Contack me</a>
+      </div>
+
     </header>
 
-    
+
 
     <footer>
         <!-- Footer content goes here -->
@@ -20,4 +39,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
