--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <header>
         <a href="#" class="logo">Jaydip's <span>Portfolio</span></a>
-        <div class="bx bx-menu"></div>
-      <ul>
+        <div class="bx bx-menu" id="menu-icon"></div>
+      <ul class="navlist">
         <li><a href="#">Home</a></li>
         <li><a href="#">About us</a></li>
         <li><a href="#"> Services</a></li>
