--- a/index.html
+++ b/index.html
@@ -26,10 +26,28 @@
       </ul>
 
       <div class="top-btnn">
-        <a href="#" class="h-btn"> Contack me</a>
+        <a href="#" class="h-btn"> Contact me</a>
       </div>
 
     </header>
+
+    <section class="hero" id="Home">
+      <div class="main-content">
+        <h4>Hi, There</h4>
+        <h1>I am <span>Jaydip Patil</span></h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div class="social">
+          <a href="#"><i class="ri-facebook-fill"></i></a>
+          <a href="#"><i class="ri-instagram-line"></i></a>
+          <a href="#"><i class="ri-youtube-fill"></i></a>
+          <a href="#"><i class="ri-twitter-x-fill"></i></a>
+        </div>
+        <div class="main-btn">
+          <a href="#" class="btn">Hire Me</a>
+          <a href="#" class="btn2">Download CV</a>
+        </div>
+      </div>
+    </section>
 
 
 
