--- a/index.html
+++ b/index.html
@@ -2,60 +2,94 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Education Portal</title>
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800;900&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Jaydip's Portfolio Website</title>
+  <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <a href="#" class="logo">Jaydip's <span>Portfolio</span></a>
-        <div class="bx bx-menu" id="menu-icon"></div>
-      <ul class="navlist">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#"> Services</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact </a></li>
-      </ul>
+  <header>
+    <a href="#" class="logo">Jaydip's <span>Portfolio</span></a>
+    <div class="bx bx-menu" id="menu-icon"></div>
+    <ul class="navlist">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#"> Services</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Contact </a></li>
+    </ul>
 
-      <div class="top-btnn">
-        <a href="#" class="h-btn"> Contact me</a>
+    <div class="top-btnn">
+      <a href="#" class="h-btn"> Contact me</a>
+    </div>
+
+  </header>
+
+  <section class="hero" id="Home">
+    <div class="main-content">
+      <h4>Hi, There</h4>
+      <h1>I am <span>Jaydip Patil</span></h1>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      <div class="social">
+        <a href="#"><i class="ri-facebook-fill"></i></a>
+        <a href="#"><i class="ri-instagram-line"></i></a>
+        <a href="#"><i class="ri-youtube-fill"></i></a>
+        <a href="#"><i class="ri-twitter-x-fill"></i></a>
       </div>
-
-    </header>
-
-    <section class="hero" id="Home">
-      <div class="main-content">
-        <h4>Hi, There</h4>
-        <h1>I am <span>Jaydip Patil</span></h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        <div class="social">
-          <a href="#"><i class="ri-facebook-fill"></i></a>
-          <a href="#"><i class="ri-instagram-line"></i></a>
-          <a href="#"><i class="ri-youtube-fill"></i></a>
-          <a href="#"><i class="ri-twitter-x-fill"></i></a>
-        </div>
-        <div class="main-btn">
-          <a href="#" class="btn">Hire Me</a>
-          <a href="#" class="btn2">Download CV</a>
-        </div>
+      <div class="main-btn">
+        <a href="#" class="btn">Hire Me</a>
+        <a href="#" class="btn btn2">Download CV</a>
       </div>
-    </section>
+    </div>
+  </section>
+  <!-- About us section -->
+  <section class="about" id="about">
+    <div class="about-img">
+      <img src="dev boy2.jpeg " alt="" >
+    </div>
+    <div class="about-text">
+      <h2>I am Web Developer <span> & App Developer</span></h2>
+      <div class="exp_area">
+        <p class="exp">
+          Experience
+          <span>Fresher</span>
+        </p>
+        <p class="exp">
+          Speciality :
+          <span>Web Development , App Developer, </span>
+        </p>
+        <p class="exp">
+          Address
+          <span>Mumbai Maharashtra - IN</span>
+        </p>
+        <p class="exp">
+          E-mail :
+          <span>Work@jaydip.com</span>
+        </p>
+        <p class="exp">
+          Phone no :
+          <span>+91 9900990090</span>
+        </p>
+        <br>
+        <p class="exp">
+    
+          <span><a href="#" class="btn"> View Projects</a></span>
+        </p>
+        
 
+  </section>
 
+  <footer>
+    <!-- Footer content goes here -->
+  </footer>
 
-    <footer>
-        <!-- Footer content goes here -->
-    </footer>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
