--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     
           <span><a href="#" class="btn"> View Projects</a></span>
         </p>
-        
+        <h2> New Section</h2>
 
   </section>
 
